# SGX-AZTEC

./: CMakeLists.txt  Makefile  aztec.c  aztec.h  bn256.c  bn256.h  main.c
App/: App.c
Enclave/: Enclave.c  Enclave.edl  aztec.c  aztec.h  bn256.c  bn256.h  util.c  util.h
